--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="title">挂一下试一试,<a href="javascript:void(0)"onclick="window.location.reload()">在挂一次试一下</a></div>
     
     <div class="content">
-        <canvas></canvas>
+        <canvas style="margin-left: -8%"></canvas>
     </div>
     </div>
 
